# stm32l0-nfc-dev

./: Cargo.toml  README.md
examples/: blinkandserial.rs
hardware/: nfc_micro.brd  nfc_micro.sch
src/: main.rs  nfc.rs
