[package]
authors = ["mattdeeds <mattdeeds@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "stm32l0-nfc-dev"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = { version = "0.2.0" }
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L010F4Px", "rt", "stm32l0x1"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
tmp1x2 = "0.2.1"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embedded-time = "0.12.0"
# nb = "1.0.0"
# rtcc = { version = "0.3.0", optional = true }
# stm32l0 = "0.15.1"
# stm32-usbd = { version = "0.6.0", optional = true }
# void = { version = "1.0.2", default-features = false }

# this lets you use `cargo fix`!
[[bin]]
name = "stm32l0-nfc-dev"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = 0 # no debug info
opt-level = "z"
# strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"